// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddNewEventForm should take a snapshot 1`] = `
<DocumentFragment>
  <form
    class="form"
    data-testid="form"
  >
    <h2>
      Add New Event
    </h2>
    <div
      class="form--item"
    >
      <label
        for="name"
      >
        Event Name
      </label>
      <input
        class="form--input"
        id="name"
        name="name"
        type="text"
        value=""
      />
      <p
        class="alert"
        data-testid="error"
      />
    </div>
    <div
      class="form--item"
    >
      <label
        for="email"
      >
        Email Address
      </label>
      <input
        class="form--input"
        id="email"
        name="email"
        type="email"
        value=""
      />
      <p
        class="alert"
        data-testid="error"
      />
    </div>
    <div
      class="form--item"
    >
      <label
        for="date"
      >
        Event Date
      </label>
      <div
        class="ant-picker ant-picker-large"
        style="width: 200px;"
      >
        <div
          class="ant-picker-input"
        >
          <input
            autocomplete="off"
            data-testid="date"
            id="date"
            name="event date"
            placeholder="Select date"
            readonly=""
            size="12"
            title=""
            value=""
          />
          <span
            class="ant-picker-suffix"
          >
            <span
              aria-label="calendar"
              class="anticon anticon-calendar"
              role="img"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="calendar"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
                />
              </svg>
            </span>
          </span>
        </div>
      </div>
      <p
        class="alert"
        data-testid="error"
      />
    </div>
    <button
      class="ant-btn btn-form ant-btn-primary"
      data-testid="submit-btn"
      disabled=""
      type="submit"
    >
      <span>
        Add event
      </span>
    </button>
  </form>
</DocumentFragment>
`;

exports[`shows server error if the request fails 1`] = `
<DocumentFragment>
  <form
    class="form"
    data-testid="form"
  >
    <h2>
      Add New Event
    </h2>
    <div
      class="form--item"
    >
      <label
        for="name"
      >
        Event Name
      </label>
      <input
        class="form--input"
        id="name"
        name="name"
        type="text"
        value="test"
      />
      <p
        class="alert"
        data-testid="error"
      />
    </div>
    <div
      class="form--item"
    >
      <label
        for="email"
      >
        Email Address
      </label>
      <input
        class="form--input"
        id="email"
        name="email"
        type="email"
        value="me@wp.pl"
      />
      <p
        class="alert"
        data-testid="error"
      />
    </div>
    <div
      class="form--item"
    >
      <label
        for="date"
      >
        Event Date
      </label>
      <div
        class="ant-picker ant-picker-large"
        style="width: 200px;"
      >
        <div
          class="ant-picker-input"
        >
          <input
            autocomplete="off"
            data-testid="date"
            id="date"
            name="event date"
            placeholder="Select date"
            size="12"
            title="10-12-2020"
            value="10-12-2020"
          />
          <span
            class="ant-picker-suffix"
          >
            <span
              aria-label="calendar"
              class="anticon anticon-calendar"
              role="img"
            >
              <svg
                aria-hidden="true"
                class=""
                data-icon="calendar"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
                />
              </svg>
            </span>
          </span>
        </div>
      </div>
      <p
        class="alert"
        data-testid="error"
      />
    </div>
    <button
      class="ant-btn btn-form ant-btn-primary"
      data-testid="submit-btn"
      disabled=""
      type="submit"
    >
      <span>
        Add event
      </span>
    </button>
  </form>
</DocumentFragment>
`;
